# wllm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
benchmarking/: README.md  gaps_and_recommendations.md  vllm_transparency_sketches.md
benchmarking/methods/: INDEX.md
benchmarking/methods/eigenscore_inside/: README.md
benchmarking/methods/rauq/: README.md
benchmarking/methods/saplma_probe/: README.md
benchmarking/methods/semantic_entropy/: README.md
benchmarking/methods/token_probability_whitebox/: README.md
reports/: release-v0.1-readiness.md  wllm_multi_architecture_validation_report.md  wllm_multi_architecture_validation_results.json
scripts/: benchmark_smoke.py  dataset_workflow.py  latency_suite.py  prefill_actmap_extraction.py
src/: cli.py
src/artifacts/: __init__.py  loading.py  npz.py  store.py  torch.py
src/extractors/: __init__.py  attentions.py  collectors.py  hidden_states.py  planning.py  selectors.py  token_data.py
src/research/: __init__.py  actmap.py  base.py  eigenscore.py  features.py  linear_probe.py  rauq.py  token_baselines.py
src/runtime/: __init__.py  base.py  capabilities.py  orchestration.py  vllm_compat.py  vllm_runtime.py
src/schemas/: artifacts.py  extraction.py  openai.py  traces.py
src/server/: app.py  errors.py  routes.py
src/tracing/: __init__.py  context.py  models.py  serialization.py
src/wllm/: __init__.py  errors.py
src/wllm/runtime/: __init__.py
src/wllm/tracing/: __init__.py
src/wllm/uq/: __init__.py
tests/integration/: test_vllm_integration.py
tests/unit/: test_api_compliance.py  test_app.py  test_artifacts.py  test_cli_and_layout.py  test_collectors.py  test_cross_area.py  test_errors.py  test_orchestration.py  test_planning_and_limits.py  test_research.py  test_robustness.py  test_selectors.py  test_tracing_serialization.py  test_vllm_runtime.py  test_wheel_build.py
