[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "wllm"
version = "0.1.0"
description = "vLLM serving with runtime-selectable white-box extraction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "w-llm contributors" }]
dependencies = [
  "fastapi>=0.115",
  "numpy>=1.26",
  "packaging>=24",
  "pydantic>=2.7",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
vllm = ["vllm==0.10.2"]
artifacts-pt = ["torch>=2.3"]
actmap = ["torch>=2.3"]
debug-transformers = ["accelerate>=0.31", "transformers>=4.43", "torch>=2.3"]
test = ["httpx>=0.27", "pytest>=8.2"]

[project.scripts]
wllm = "cli:main"

[tool.hatch.build.targets.wheel]
only-include = [
  "src/cli.py",
  "src/artifacts",
  "src/extractors",
  "src/research",
  "src/runtime",
  "src/schemas",
  "src/server",
  "src/tracing",
]
sources = ["src"]

[tool.hatch.build.targets.sdist]
only-include = [
  ".gitignore",
  "README.md",
  "pyproject.toml",
  "scripts",
  "src",
  "tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
  "integration: requires vLLM and a local model",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
files = ["src"]
